Fixed Accordion spacing

--- a/src/blocks/accordion/style.scss
+++ b/src/blocks/accordion/style.scss
@@ -17,7 +17,7 @@
 			// 	}
 			// }
 			.pb-accordion-icon {
-				margin: 0 10px 0 0px;
+				margin: 0 5px 0 0px;
 
 			}
 			.pb-accordion-title {
